# nkido

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  netlify.toml
akkado/: CMakeLists.txt
akkado/include/akkado/: akkado.hpp  analyzer.hpp  ast.hpp  builtins.hpp  builtins_json.hpp  codegen.hpp  const_eval.hpp  file_resolver.hpp  import_scanner.hpp  lexer.hpp  mini_lexer.hpp  mini_parser.hpp  mini_token.hpp  parser.hpp  pattern_eval.hpp  pattern_event.hpp  required_sample.hpp  shape_index.hpp  source_map.hpp  stdlib.hpp  symbol_table.hpp  token.hpp  tuning.hpp  typed_value.hpp  voicing.hpp
akkado/include/akkado/codegen/: arrays.hpp  fm_detection.hpp  helpers.hpp
akkado/src/: akkado.cpp  analyzer.cpp  builtins_json.cpp  codegen.cpp  codegen_arrays.cpp  codegen_functions.cpp  codegen_params.cpp  codegen_patterns.cpp  codegen_state.cpp  codegen_stereo.cpp  codegen_viz.cpp  const_eval.cpp  diagnostics.cpp  file_resolver.cpp  import_scanner.cpp  lexer.cpp  mini_lexer.cpp  mini_parser.cpp  parser.cpp  pattern_debug.cpp  pattern_eval.cpp  shape_index.cpp  source_map.cpp  symbol_table.cpp  tuning.cpp  typed_value.cpp  voicing.cpp
akkado/tests/: CMakeLists.txt  test_akkado.cpp  test_analyzer.cpp  test_arrays.cpp  test_ast_arena.cpp  test_builtins.cpp  test_builtins_json.cpp  test_chord.cpp  test_codegen.cpp  test_const_eval.cpp  test_diagnostics.cpp  test_file_resolver.cpp  test_import.cpp  test_import_scanner.cpp  test_lexer.cpp  test_methods.cpp  test_mini_notation.cpp  test_parser.cpp  test_pattern_debug.cpp  test_pattern_event.cpp  test_pattern_scalar.cpp  test_sample_emission_golden.cpp  test_sample_registry.cpp  test_shape_index.cpp  test_source_map.cpp  test_state.cpp  test_types.cpp
cedar/: CMakeLists.txt
cedar/bindings/: bindings.cpp
cedar/include/cedar/: cedar.hpp
cedar/include/cedar/audio/: sample_pack.hpp  soundfont.hpp  wav_loader.hpp
cedar/include/cedar/dsp/: constants.hpp  fft.hpp
cedar/include/cedar/io/: audio_decoder.hpp  buffer.hpp  errors.hpp  file_cache.hpp  file_loader.hpp  uri_resolver.hpp
cedar/include/cedar/io/handlers/: bundled_handler.hpp  file_handler.hpp  github_handler.hpp  http_handler.hpp
cedar/include/cedar/opcodes/: arrays.hpp  delays.hpp  distortion.hpp  dsp_state.hpp  edge_op.hpp  filters.hpp  modulation.hpp  opcodes.hpp  oscillators.hpp  reverbs.hpp  samplers.hpp  sequence.hpp  sequencing.hpp  soundfont.hpp  state_op.hpp  stereo.hpp  utility.hpp
cedar/include/cedar/vm/: audio_arena.hpp  buffer_pool.hpp  context.hpp  instruction.hpp  sample_bank.hpp  state_pool.hpp  vm.hpp
cedar/include/cedar/wavetable/: bank.hpp  preprocessor.hpp  registry.hpp
cedar/src/audio/: soundfont.cpp
cedar/src/dsp/: fft.cpp
cedar/src/io/: audio_decoder.cpp  file_cache.cpp  file_loader.cpp  uri_resolver.cpp
cedar/src/io/handlers/: bundled_handler.cpp  file_handler.cpp  github_handler.cpp  http_handler.cpp
cedar/src/opcodes/: minblep_table.cpp
cedar/src/vm/: vm.cpp
cedar/src/wavetable/: preprocessor.cpp  registry.cpp
cedar/tests/: CMakeLists.txt  test_arrays.cpp  test_audio_decoder.cpp  test_cedar.cpp  test_crossfade.cpp  test_edge_op.cpp  test_fft.cpp  test_file_loader.cpp  test_hot_swap.cpp  test_phaser.cpp  test_poly.cpp  test_sample_bank.cpp  test_sequence.cpp  test_soundfont_registry.cpp  test_state_op.cpp  test_uri_resolver.cpp  test_vm.cpp  test_wavetable.cpp
cmake/: CompilerOptions.cmake  Coverage.cmake  Dependencies.cmake
docs/: Akkado A Rhythmic & DSP Language Specification.md  MVP-INCOMPLETE-IMPLEMENTATIONS.md  Microtonal Extension PRD.md  PRD-Advanced-Functions.md  PRD-Compiler-Type-System.md  PRD-Conditionals-Logic.md  PRD-Crossfade-Audio-Fixes.md  PRD-Editor-Autocomplete.md  PRD-Error-Handling-Recovery.md  PRD-Language-Extensions.md  PRD-Module-Import.md  PRD-Pattern-Array-Note-Extensions.md  PRD-Pattern-Transport.md  PRD-Polyphony-system.md  PRD-Tap-Delay.md  PRD-Timeline-Curve-Notation.md  PRD-Underscore-Placeholder.md  PRD-Viz-System-Revision.md  Technical Specification_ SquelchEngine Adaptive Resonant Distortion & Filter System.md  agent-guide-userspace-functions.md  akkado-redundancy-analysis.md  cedar-architecture.md  cedar-size-report.md  cedar-vm-hot-swap-implementation.md  cross-platform-porting.md  dsp-experiment-methodology.md  dsp-issues.md  dsp-quality-checklist.md  enkido-web-ide-prd.md  mini-notation-implementation.md  mini-notation-reference.md  netlify_deployment.md  nkido-web-ide-prd.md  prd-advanced-functions.md  prd-audio-input.md  prd-builtin-variables.md  prd-cedar-esp32.md  prd-compile-time-functions.md  prd-compiler-type-system.md  prd-conditionals-logic.md  (+44 more)
experiments/: REFACTOR_PLAN.md  cedar_testing.py  filter_helpers.py  generate_wavetables.py  phase21_smoke.akk  phase2_smoke.akk  run_all.sh  test_op_adsr.py  test_op_ar.py  test_op_bitcrush.py  test_op_bp.py  test_op_chorus.py  test_op_clock.py  test_op_comb.py  test_op_comp.py  test_op_dattorro.py  test_op_delay.py  test_op_diode.py  test_op_edge.py  test_op_env_follower.py  (+67 more)
tools/midi2akk/: README.md  pyproject.toml
tools/midi2akk/src/midi2akk/: __init__.py  __main__.py  emit.py  gm.py  midi_reader.py  mini_notation.py  quantize.py  voice_split.py
tools/midi2akk/tests/: conftest.py  test_emit.py  test_mini_notation.py  test_quantize.py  test_voice_split.py
tools/nkido-cli/: CMakeLists.txt  asset_loader.cpp  asset_loader.hpp  audio_engine.cpp  audio_engine.hpp  bytecode_dump.cpp  bytecode_dump.hpp  bytecode_loader.cpp  bytecode_loader.hpp  main.cpp  program_loader.cpp  program_loader.hpp  serve_mode.cpp  serve_mode.hpp
tools/nkido-cli/tests/: CMakeLists.txt  test_paths.hpp.in  test_render.cpp  test_serve.cpp
tools/nkido-cli/tests/fixtures/: default_kit_minimal.strudel.json.in  local_bank.strudel.json.in  oscillator.akk  poly_seq.akk  sample_play.akk  user_override_bank.strudel.json.in
tools/nkido-cli/ui/: bitmap_font.cpp  bitmap_font.hpp  text_buffer.cpp  text_buffer.hpp  ui_mode.cpp  ui_mode.hpp
web/wasm/: CMakeLists.txt  enkido_wasm.cpp  nkido_wasm.cpp
(+190 files in other folders)
